--- a/style.css
+++ b/style.css
@@ -11,14 +11,25 @@
 img {
     max-width: 100%;
     height: 50px;
+    margin-right: 10px;
+  }
+  .main p{
+  margin-bottom: 10px;
+  margin-top: 20px;
+
+  }
+  .follow-btn{
+    margin-left: 20px;;
   }
   .header{
     display: flex;
+   align-items: center;
   }
  .updates{
    display: flex;
- 
- }
+
+  }
  .buttons{
    display: flex;
  }
+ 
