--- a/style.css
+++ b/style.css
@@ -3,33 +3,36 @@
   margin: 0;
   box-sizing: border-box;
 }
-.container{
+
+.container {
   margin: auto;
   width: 400px;
+  margin-top: 100px;
+  border: cadetblue 1px solid;
 }
 
 img {
-    max-width: 100%;
-    height: 50px;
-    margin-right: 10px;
-  }
-  .main p{
+  max-width: 100%;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.header{
+  display: flex;
+}
+.profile{
+  display: flex;
+  flex-direction: column;
+}
+.follow-btn{
+  margin-left: 100px;
+  margin-top: 10px;
+}
+
+p{
+  margin-top: 10px;
   margin-bottom: 10px;
-  margin-top: 20px;
+  width: 200px;
+  margin-left: 10px;
+}
 
-  }
-  .follow-btn{
-    margin-left: 20px;;
-  }
-  .header{
-    display: flex;
-   align-items: center;
-  }
- .updates{
-   display: flex;
-
-  }
- .buttons{
-   display: flex;
- }
- 
